# dw-sample-framework

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
extras/: brdf_preintegrate_lut.cpp  brdf_preintegrate_lut.h  bruneton_sky_model.cpp  bruneton_sky_model.h  cubemap_prefilter.cpp  cubemap_prefilter.h  cubemap_sh_projection.cpp  cubemap_sh_projection.h  equirectangular_to_cubemap.cpp  equirectangular_to_cubemap.h  hosek_wilkie_sky_model.cpp  hosek_wilkie_sky_model.h  ray_traced_scene.cpp  ray_traced_scene.h  shadow_map.cpp  shadow_map.h
include/: Entity.h  Macros.h  Mesh.h  Scene.h  application.h  assimp_loader.h  camera.h  debug_draw.h  demo_player.h  entity.h  geometry.h  glad.h  imgui_helpers.h  imgui_impl_glfw_gl3.h  imgui_impl_glfw_vulkan.h  khrplatform.h  logger.h  macros.h  material.h  mesh.h  mesh_generator.h  ogl.h  packed_array.h  profiler.h  ray_traced_scene.h  render_graph.h  render_node.h  renderer.h  scene.h  shadows.h  timer.h  trm_loader.h  tsm_headers.h  tsm_material.h  tsm_vertex.h  utility.h  vk.h
include/glad/: glad.h
sample/: CMakeLists.txt  main.cpp  main_gl.cpp  main_vk.cpp  main_vk_rt.cpp  mesh.rchit  mesh.rgen  mesh.rmiss
sample/shaders/: brdf_cs.glsl  mesh.frag  mesh.rchit  mesh.rgen  mesh.rmiss  mesh.vert  prefilter_cs.glsl  sh_add_cs.glsl  sh_projection_cs.glsl
src/: CMakeLists.txt  Material.cpp  Mesh.cpp  Scene.cpp  aftermath_callbacks.cpp  aftermath_callbacks.h  application.cpp  assimp_loader.cpp  camera.cpp  debug_draw.cpp  debug_draw.frag  debug_draw.vert  demo_player.cpp  entity.cpp  extensions_vk.cpp  gl_core_4_5.c  gl_core_4_5.h  glad.c  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_vulkan.cpp  logger.cpp  material.cpp  mesh.cpp  ogl.cpp  profiler.cpp  ray_traced_scene.cpp  render_node.cpp  renderer.cpp  scene.cpp  shadows.cpp  sky_model.cpp  timer.cpp  trm_loader.cpp  utility.cpp  vk.cpp
src/glad/: glad.c
